src/renderer/features/workbench/pages/detected/pages/ComponentDetail/ComponentDetail.scss
#ComponentDetail {
  header.app-header {
    .header, .tab-navigation {
      display: flex;
      width: 100%;
      justify-content: space-between;
    }

    .header {
      align-items: flex-start;
    }

    .tab-navigation {
      align-items: flex-end;
    }

    .search-box {
      width: $search-box-width;
      margin-bottom: 16px;
    }
  }

  .app-content {
    display: flex;
    min-height: calc(100% - 300px);
    align-items: flex-start;

    .loader,  .file-group-container .loader {
      justify-self: center;
      flex-direction: column;
      align-self: center;
    }
  }

  .filter-container {
    display: flex;
    align-items: center;
    line-height: 26px;
    // margin-top: -5px;

    .header-title {
      margin-bottom: 0;
    }

    .btn-version {
      $color:  rgb(51, 51, 51);
      margin-top: 2px;
      padding: 0px 2px 0px 8px;
      font-weight: 600;
      color: lighten($color, 20);
      font-size: 1em;
      background-color: #dbdbdb;

      &:hover {
        background-color: #d3d3d3;
      }

      &.selected {
        // color: var(--color-component);
        color:  black;
      }
    }
  }

  footer.app-footer {
    position: sticky;
    bottom: 0;
    overflow: hidden;
    background-color: var(--background-color-primary);

   .groups {
      margin: 16px 0;
      background: #F4F4F5;
      padding: 8px 16px;
      border-radius: 4px;

      font-weight: 300;
      color: var(--color-primary);

      b {
        font-weight: 500;
      }
    }
  }

  .file-group-container {
    width: 100%;
    display: flex;
    flex-direction: column;

    .current {
      order: 1;
    }

    .group {
      margin-bottom: 12px;
    }

    .component {
      color: var(--color-component);
    }
  }
}

.file-list {
  display: grid;
  width: 100%;
  grid-template-columns: calc(50% - 7px) calc(50% - 7px);
  grid-gap: 7px;

  @media screen and (max-width: $default-width) {
    grid-template-columns: 100%;
    .match-card {
      margin: 0;
    }
  }

  .item {
    cursor: pointer;
    .match-card {
      width: calc(100% - 10px);
    }
  }

}

#VersionSelectorList .MuiList-root.MuiMenu-list.MuiList-padding {
  min-width: 170px;

  .version-container {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    width: 100%;

    .version {
      margin-right: 5px;
    }

    .files-counter {
      color:#949496;
    }
  }
}

